# habits

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  TECHNICAL_OVERVIEW.md  debug-db.html  docker-compose.yml  index.html  package-lock.json  package.json  postcss.config.js  pyproject.toml  test-db.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: python-app.yml  semantic-release.yml
data/configs/: user_configs.json
data/days/: days.json
public/: privacy-policy.html  sw.js  terms-of-service.html
src/: App.jsx  index.css  main.jsx
src/components/: AppIcon.jsx  GoogleDriveSync.jsx  IconSelector.jsx  Navbar.jsx
src/constants/: icons.js
src/contexts/: ThemeContext.jsx
src/habits/: main.py
src/habits/api/: __init__.py  dependencies.py  entries.py  habits.py  models.py  settings.py
src/habits/domain/: exceptions.py
src/habits/domain/models/: __init__.py  day.py  habit.py  habit_entry.py  habit_status.py  user_config.py  (+1 more)
src/habits/repositories/: interfaces.py  json_storage.py
src/habits/router/: auth.py
src/habits/services/: habit_tracking_service.py  weekly_analysis_service.py
src/habits/templates/: base.html  dashboard.html  habits.html  progress.html  settings.html
src/habits/utils/: date_parser.py  logging_config.py  region_config.py
src/habits/web/: __init__.py  dashboard.py  forms.py  pages.py
src/pages/: Habits.jsx  History.jsx  Overview.jsx  Settings.jsx
src/site/: index.html
src/utils/: googleDriveSync.js  indexedDB.js  notificationService.js  themes.js  version.js
tests/domain/models/: test_day.py  test_habit.py  test_habit_entry.py  test_user_config.py
tests/repositories/: test_json_storage.py
tests/security/: __init__.py  test_input_validation.py  test_path_traversal.py
tests/services/: test_habit_tracking_service.py
(+1 files in other folders)
