[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/habits"]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "hatchling>=1.27.0",
]

lint = [
    "mypy>=1.17.0",
    "ruff>=0.12.7",
]

test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.22.0",
    "coverage[toml]>=7.4.0",
    "pytest-cov>=4.1.0",
]